Fix animation iphone (safari) - border-radius sur button__order

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -585,6 +585,7 @@ main.menu {
           @include fonts(bold);
         }
         .button__order {
+          border-radius: 0 1rem 1rem 0;
           display: flex;
           justify-content: center;
           align-items: center;
